--- a/package.json
+++ b/package.json
@@ -4,11 +4,22 @@
   "description": "digital concierge software",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/HeatherJoYoung/concierge-api.git"
   },
   "author": "Team D",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2"
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "mssql": "^10.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
